--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,25 @@
 /* write your override styles here */
+
+div#wall div.tag-1{
+  display:none;
+}
+
+div#wall div#tag-2{
+  display:none;
+}
+
+div#wall div#tag-3.wicked{
+  display:none;
+}
+
+div#wall div.parent div#tag-4{
+  display:none;
+}
+
+div#wall div.parent div#tag-5.slick{
+  display:none;
+}
+
+div#wall div.parent div{
+  display:none;
+}
